# fov-notification-services

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: run_tests.yml
app/models/: observation.py  schedule.py
docs/architecture/: c1_context.puml  c2_container.puml
docs/architecture/adrs/: 001-fastapi-over-flask.md
services/operator/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/operator/alembic/: env.py
services/operator/alembic/versions/: 20251211_1329_dc538d6a653b_initial_schema.py  20251211_1918_99ca4f6696a7_make_start_end_times_timezone_aware.py  20251218_1110_50d0abb42d56_add_observatory_location.py  20260205_2140_9adb027e6e21_add_api_keys_table.py
services/operator/app/: __init__.py  database.py  dependencies.py  main.py  scheduler.py
services/operator/app/models/: __init__.py  api_key.py  observation.py  schedule.py
services/operator/app/routers/: schedules.py  status.py
services/operator/app/schemas/: schedule.py
services/operator/app/tasks/: __init__.py  cleanup_schedules.py  retrieve_schedules.py
services/operator/tests/: conftest.py  test_routes.py  test_scheduler.py  test_tasks.py
shared/: pyproject.toml
shared/src/auth/: __init__.py  api_key.py
shared/src/notifications/: __init__.py  channels.py  email_channel.py  rabbitmq_broker.py
tests/: test_tasks.py
