[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared services and utilities for FOV Notification Services"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "towncrier>=25.8.0",
]

[tool.ruff]
lint.select = ["E", "F", "I", "N", "UP", "S", "B"]
src = ["src"]
