[project]
name = "fov-notification-service"
version = "0.1.0"
description = "Notification service for observation schedules and satellite FOV interference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.17.2",
    "shared",
    "apscheduler>=3.10.4",
    "astropy>=7.2.0",
    "fastapi[standard]>=0.124.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "towncrier>=25.8.0",
]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[tool.pyright]
extraPaths = ["../../shared/src"]

[tool.mypy]
mypy_path = "../../shared/src"
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
explicit_package_bases = true


[[tool.mypy.overrides]]
module = [
    "astropy.time",
    "apscheduler.events",
    "apscheduler.schedulers.asyncio",
    "apscheduler.triggers.interval",
]
ignore_missing_imports = true

[tool.ruff]
lint.select = ["E", "F", "I", "N", "UP", "S", "B"]
src = ["app", "tests"]
